# opm-godot

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  BENCHMARK_RATIONALE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXTGEN_CVARS.md  README.md  UI_RENDERING_FIX.md  agent-task-01-audio.md  agent-task-02-shaders.md  agent-task-03-bsp-environment.md  agent-task-04-entity-perf.md  agent-task-05-ui-menus.md  agent-task-06-visual-effects.md  agent-task-07-game-logic.md  agent-task-08-network.md  agent-task-09-rendering-polish.md  agent-task-10-integration.md  agent-task-11-parity-loop.md  agent-task-12-vfx-foundation.md  agent-task-13-impact-effects.md  agent-task-14-explosion-effects.md  agent-task-15-muzzle-shell.md  agent-task-16-blood-effects.md  agent-task-17-env-particles.md  agent-task-18-screen-effects.md  agent-task-19-tracers-debris.md  agent-task-20-surface-fx-data.md  agent-task-21-shadow-projection.md  agent-task-22-cinematic-stub.md  agent-task-23-lightmap-styles.md  agent-task-24-render-quality.md  agent-task-25-draw-distance.md  agent-task-26-debug-render.md  agent-task-27-animation-events.md  agent-task-28-anim-blending.md  agent-task-29-render-sort.md  (+47 more)
.claude/skills/asset-validate/: SKILL.md
.claude/skills/clean-build/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/docker-logs/: SKILL.md
.claude/skills/launch-config/: SKILL.md
.claude/skills/parser-gen/: SKILL.md
.claude/skills/patch-status/: SKILL.md
.claude/skills/port-check/: SKILL.md
.claude/skills/relay-debug/: SKILL.md
.claude/skills/setup-dev/: SKILL.md
.claude/skills/submodule-update/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/web-launch/: SKILL.md
.claude/skills/web-run/: SKILL.md
.github/: Cloud_Agent_Task_Complete_OpenMoHAA.md  copilot-instructions.md
.github/prompts/: continue.prompt.md
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-native.yml  build-web.yml  build-windows.yml  release.yml  test-linux.yml
build-cmake/android-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/android-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/ios-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/ios-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/linux-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/linux-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/macos-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/macos-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/web-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/web-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/windows-debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-cmake/windows-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
config/: server.cfg
docker/: docker-compose.yml  portainer-stack.yml
docker/web/: 40-generate-manifest.sh  Dockerfile  default.conf  docker-entrypoint.sh  nginx.conf
openmohaa/: .gitignore  AGENTS.md  SConstruct  TASKS.md
openmohaa/.cmake-native/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
openmohaa/.cmake-native/Release/: omohaaded
openmohaa/.cmake-native/recacstnav_recast/: CTestTestfile.cmake  cmake_install.cmake
openmohaa/.cmake-native/recastnav_crowd/: CTestTestfile.cmake  cmake_install.cmake
openmohaa/.cmake-native/recastnav_detour/: CTestTestfile.cmake  cmake_install.cmake
openmohaa/code/botlib/: be_aas.h  l_crc.h  (+11 more)
project/: AOI_d_915NGyOchorAJ3PLa0aCDckqq2qHsfFFSrEWgDsZ6aVvQ7bD-uIEj8BuWi8qbtchivRV5YUgj49ku-lMuZorSpWqJz6WpA5u7afPXaTmy8Avc8IUkPvhLjkbRosTc22FUDRNQ5ls5jr7IulnzvDyww7NTciOQjjzA_S0jTSqhIhvQ_GA=s1024-rj  Main.gd  Main.gd.uid  Main.tscn  ResolutionTest.gd  ResolutionTest.gd.uid  ResolutionTest.tscn  TestChat.gd  TestChat.gd.uid  TestChat.tscn  TestConnect.gd  TestConnect.tscn  TestMapRotation.gd  TestMapRotation.gd.uid  TestMapRotation.tscn  TestViewmodel.gd  TestViewmodel.gd.uid  TestViewmodel.tscn  export_presets.cfg  godot_log.txt  openmohaa.gdextension  openmohaa.gdextension.uid  project.godot
project/.godot/: extension_list.cfg
project/autoloads/: CacheManager.gd  MapDownloader.gd  NetworkHandshake.gd  ResourceSandboxManager.gd  ServerSessionManager.gd
relay/: Dockerfile  mohaa_relay.js  package-lock.json  package.json
scripts/: build-desktop.sh  build-native.sh  build-web-docker.sh  build-web.sh  configure-macos-cross-env.sh  deploy-cdn.sh  deploy.sh  export-godot.sh  generate-manifests.sh  package-build.sh  patch-build.py  release.sh  setup-macos-build.sh  sign-android.sh  sign-ios.sh  test-all.sh  test-build-matrix.sh  test-chat.sh  test-connect.sh  test-map-transition-e2e.sh  test-resolution.sh  test-viewmodel.sh  test-web-connect.sh  test-web-e2e.sh  test-web.sh  test.sh
scripts/web-e2e/: .mohaa-web-probe.mjs  diag-got-fix.mjs  diag-probe.mjs  package-lock.json  package.json  run-map-transition-e2e.mjs  run-web-connect-e2e.mjs  run-web-e2e.mjs
scripts/web_assets/: patch_web_js.py  render_html_template.py
(+218 files in other folders)
